Fixes: NB#245625 - Letters are not fully visible inside text message bubble
RevBy: TrustMe

--- a/base/meegotouch/libmeegotouchviews/style/mlabelstyle.css
+++ b/base/meegotouch/libmeegotouchviews/style/mlabelstyle.css
@@ -5,6 +5,9 @@ MLabelStyle {
     margin-right: $MARGIN_MEDIUM;
     margin-top: $MARGIN_MEDIUM;
     margin-bottom: $MARGIN_MEDIUM;
+    
+    reactive-margin-top: $MARGIN_LARGE;
+    reactive-margin-bottom: $MARGIN_LARGE;
 
     color: $COLOR_FOREGROUND;
     font: $FONT_DEFAULT;
